# dt

./: Cargo.toml  README.md  build.rs
example/: test.c  test_dbg  test_no_dbg  test_no_dbg_stripped
src/: cli.rs  codes.rs  disasm.rs  disassem.rs  dt_elf.rs  dtelf.rs  elf.rs  main.rs
targs/: test.c  test_dbg  test_no_db
