[package]
name = "dt"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "*", features = ["derive"] }
goblin = { version = "*" }
num-derive = "0.3.3"

[build-dependencies]
cc = "1.0.78"
gcc = "*"

[profile.release]
strip = true
lto = true
# Increases compile time but allows 
# for futher optimizations
codegen-units = 1
panic = "abort"


# Smallest build
# cargo build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort\
# --release --target x86_64-unknown-linux-gnu
